# hopenshot

./: .gitignore
hopenshot-qt/src/: launch.py
hopenshot-qt/src/classes/: json_data.py  languages.py  logger.py  query.py  settings.py  updates.py
hopenshot-qt/src/windows/: main_window.py  video_widget.py
hopenshot-qt/src/windows/models/: files_model.py
hopenshot-qt/src/windows/views/: file_listview.py
libhopenshot/: CMakeLists.txt
libhopenshot/include/: ChannelLayouts.hpp  FFmpegReader.hpp  Fraction.hpp  ReaderBase.hpp
libhopenshot/src/: FFmpegReader.cpp  Fraction.cpp  ReaderBase.cpp
libhopenshot/tests/: FFmpegReader_test.cpp
src/classes/: app.py  info.py  project_data.py  query.py  ui_utils.py
src/windows/: main_window.py
src/windows/models/: files_model.py
src/windows/views/: file_listview.py
